# epistle

./: README.md  pyproject.toml
src/epistle/: cli.py  notmuch.py  terminal.py
